--- a/index.html
+++ b/index.html
@@ -1,32 +1,49 @@
 <!doctype html>
 <html ng-app="todoApp">
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-  </head>
-  <body>
-    <div ng-controller="toDoController">
 
-      <h1>Things to do</h1>
+<head>
+      <link rel="stylesheet" href="https://cdn.rawgit.com/angular/bower-material/v0.9.7/angular-material.css">
+      <link rel="stylesheet" href="style.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-messages.min.js"></script>
+      <script src="https://cdn.rawgit.com/angular/bower-material/v0.9.7/angular-material.js"></script>
+</head>
 
-        <ul ng-repeat="task in tasks">
+<body>
+      <div ng-controller="toDoController">
+            <md-toolbar md-scroll-shrink ng-if="true">
+                  <div class="md-toolbar-tools">
+                        <h1>
+                              <span>Things To Do</span>
+                        </h1>
+                  </div>
 
-          <p><input type="checkbox" ng-model="checked()">{{task.text}}</p>
+            </md-toolbar>
+                  <div layout="row" layout-align="center">
+                        <div class="wrapper">
+                              <md-list ng-cloak>
+                                    <md-list-item ng-repeat="task in tasks" class="fade">
+                                          <p> {{task.text}}</p>
+                                          <md-checkbox class="md-secondary" ng-click="checked($index)"></md-checkbox>
+                              <md-divider></md-divider>
+                              </md-list-item>
 
-        </ul>
 
-      <form>
-          <input type="text" ng-model="taskText" placeholder="Enter Task" required />
-          <input type="submit" ng-click="addTask()" value="Enter" />
-      </form>
 
-      <h2>Completed Tasks</h2>
+                              <form ng-submit="addTask()">
+                                    <md-input-container flex>
+                                          <label>Enter Task</label>
+                                          <input type="text" ng-model="taskText"/>
+                                    </md-input-container>
 
-      <ul ng-repeat="completed in completedTasks">
-          <p style="text-decoration: line-through;"><input type="checkbox" checked>{{completed.text}}</p>
-      </ul>
+                              </form>
+                        </div>
+                  </div>
+      </div>
 
-    </div>
-
-    <script src="main.js"></script>
-  </body>
+      <script src="main.js"></script>
+</body>
 </html>
